--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -225,7 +225,21 @@
 	</dict>
 	<key>Default Bookmark Guid</key>
 	<string>99BCF7BC-47E7-4F07-BBA2-5FC175DB3995</string>
+	<key>DimBackgroundWindows</key>
+	<false/>
+	<key>DimOnlyText</key>
+	<false/>
+	<key>DisableFullscreenTransparency</key>
+	<false/>
+	<key>EnableDivisionView</key>
+	<true/>
+	<key>EnableProxyIcon</key>
+	<false/>
+	<key>HideScrollbar</key>
+	<false/>
 	<key>HotkeyMigratedFromSingleToMulti</key>
+	<true/>
+	<key>JobName</key>
 	<true/>
 	<key>LoadPrefsFromCustomFolder</key>
 	<true/>
@@ -267,9 +281,9 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>573 242 445 77 0 0 1680 1027 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>387 419 796 486 0 0 1680 1027 </string>
+	<string>387 458 1018 447 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>38 548 1242 477 0 0 1680 1027 </string>
+	<string>568 448 1002 500 0 0 1680 1027 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -1048,8 +1062,14 @@
 	<true/>
 	<key>NoSyncInstallationId</key>
 	<string>20C257E0-68DD-4616-B621-91680FF01BAE</string>
+	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
+	<true/>
+	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
+	<integer>0</integer>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
 	<real>569612107.22566903</real>
+	<key>OnlyWhenMoreTabs</key>
+	<true/>
 	<key>PointerActions</key>
 	<dict>
 		<key>Button,1,1,,</key>
@@ -1085,6 +1105,8 @@
 	</dict>
 	<key>PrefsCustomFolder</key>
 	<string>/Users/constantinmihalache/.dotrc</string>
+	<key>PromptOnQuit</key>
+	<false/>
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedAlternateAppNameKey</key>
@@ -1096,6 +1118,16 @@
 	<key>SULastCheckTime</key>
 	<date>2019-01-19T17:49:55Z</date>
 	<key>SUSendProfileInfo</key>
+	<false/>
+	<key>ShowBookmarkName</key>
+	<false/>
+	<key>UseBorder</key>
+	<false/>
+	<key>UseLionStyleFullscreen</key>
+	<true/>
+	<key>UseMetal</key>
+	<false/>
+	<key>WindowNumber</key>
 	<false/>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
